fix card & overflow img in page vote

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -60,6 +60,17 @@
     font-size: 0.8rem;
 }
 
+.cropped {
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+}
+
+.cropped img {
+    width: 100%;
+    height: 100%;
+}
+
 @media (min-width: 768px) {
     .about {
         justify-content: space-between;
